force-app/main/default/objects/Programmation_Newsletter__c/Programmation_Newsletter__c.object-meta.xml
<CustomObject>
    <label>Programmation Newsletter</label>
    <nameField>
        <displayFormat>NL-{0000000}</displayFormat>
        <label>Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Programmations Newsletter</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>