force-app/main/default/objects/Programmation_Newsletter__c/fields/AfficheFR__c.field-meta.xml
<CustomField>
    <fullName>AfficheFR__c</fullName>
    <label>Affiche FR</label>
    <type>Url</type>
</CustomField>