force-app/main/default/objects/Programmation_Newsletter__c/fields/AfficheNL__c.field-meta.xml
<CustomField>
    <fullName>AfficheNL__c</fullName>
    <label>Affiche NL</label>
    <type>Url</type>
</CustomField>