force-app/main/default/objects/Programmation_Newsletter__c/fields/Cinema_LM__c.field-meta.xml
<CustomField>
    <fullName>Cinema_LM__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Cinéma</label>
    <referenceTo>Complexe__c</referenceTo>
    <relationshipLabel>Programmations Newsletter</relationshipLabel>
    <relationshipName>Programmations_Newsletter</relationshipName>
    <type>Lookup</type>
</CustomField>