force-app/main/default/objects/Programmation_Newsletter__c/fields/CodeComplexe__c.field-meta.xml
<CustomField>
    <fullName>CodeComplexe__c</fullName>
    <label>Code Complexe</label>
    <length>5</length>
    <type>Text</type>
</CustomField>