force-app/main/default/objects/Programmation_Newsletter__c/fields/CodeFilmUGC__c.field-meta.xml
<CustomField>
    <fullName>CodeFilmUGC__c</fullName>
    <label>Code Film UGC</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>