force-app/main/default/objects/Programmation_Newsletter__c/fields/CodeFormat__c.field-meta.xml
<CustomField>
    <fullName>CodeFormat__c</fullName>
    <label>Code Format</label>
    <length>40</length>
    <type>Text</type>
</CustomField>