force-app/main/default/objects/Programmation_Newsletter__c/fields/DateAffiche__c.field-meta.xml
<CustomField>
    <fullName>DateAffiche__c</fullName>
    <label>Date Affiche</label>
    <type>Date</type>
</CustomField>