force-app/main/default/objects/Programmation_Newsletter__c/fields/DateSortie__c.field-meta.xml
<CustomField>
    <fullName>DateSortie__c</fullName>
    <label>Date Sortie</label>
    <type>Date</type>
</CustomField>