force-app/main/default/objects/Programmation_Newsletter__c/fields/Display__c.field-meta.xml
<CustomField>
    <fullName>Display__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Display</label>
    <type>Checkbox</type>
</CustomField>