force-app/main/default/objects/Programmation_Newsletter__c/fields/Duree__c.field-meta.xml
<CustomField>
    <fullName>Duree__c</fullName>
    <label>Duree</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>