force-app/main/default/objects/Programmation_Newsletter__c/fields/Interdiction__c.field-meta.xml
<CustomField>
    <fullName>Interdiction__c</fullName>
    <label>Interdiction</label>
    <length>255</length>
    <type>Text</type>
</CustomField>