force-app/main/default/objects/Programmation_Newsletter__c/fields/Nationalite__c.field-meta.xml
<CustomField>
    <fullName>Nationalite__c</fullName>
    <label>Nationalité</label>
    <length>15</length>
    <type>Text</type>
</CustomField>