force-app/main/default/objects/Programmation_Newsletter__c/fields/NomFilm__c.field-meta.xml
<CustomField>
    <fullName>NomFilm__c</fullName>
    <label>Nom du Film</label>
    <length>80</length>
    <type>Text</type>
</CustomField>