force-app/main/default/objects/Programmation_Newsletter__c/fields/Origine__c.field-meta.xml
<CustomField>
    <fullName>Origine__c</fullName>
    <label>Origine</label>
    <length>40</length>
    <type>Text</type>
</CustomField>