force-app/main/default/objects/Programmation_Newsletter__c/fields/Semaine__c.field-meta.xml
<CustomField>
    <fullName>Semaine__c</fullName>
    <label>Semaine</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>