force-app/main/default/objects/Programmation_Newsletter__c/fields/Tech_Film__c.field-meta.xml
<CustomField>
    <fullName>Tech_Film__c</fullName>
    <formula>TEXT( Cinema_LM__r.CodePays__c ) &amp; &quot;_&quot; &amp; TEXT(CodeFilmUGC__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Tech_Film</label>
    <type>Text</type>
</CustomField>