force-app/main/default/objects/Programmation_Newsletter__c/fields/Tech_IdProgrammation__c.field-meta.xml
<CustomField>
    <fullName>Tech_IdProgrammation__c</fullName>
    <externalId>true</externalId>
    <label>Tech IdProgrammation</label>
    <length>20</length>
    <required>true</required>
    <type>Text</type>
    <unique>true</unique>
</CustomField>