force-app/main/default/objects/Programmation_Newsletter__c/fields/TitreNL__c.field-meta.xml
<CustomField>
    <fullName>TitreNL__c</fullName>
    <label>Titre NL</label>
    <length>80</length>
    <type>Text</type>
</CustomField>