force-app/main/default/objects/Programmation_Newsletter__c/fields/TypeFilm__c.field-meta.xml
<CustomField>
    <fullName>TypeFilm__c</fullName>
    <label>Type de Film</label>
    <length>255</length>
    <type>Text</type>
</CustomField>