force-app/main/default/objects/Programmation_Newsletter__c/fields/TypeLunette__c.field-meta.xml
<CustomField>
    <fullName>TypeLunette__c</fullName>
    <label>Type Lunette</label>
    <length>255</length>
    <type>Text</type>
</CustomField>