force-app/main/default/objects/Programmation_Newsletter__c/fields/TypeSeance__c.field-meta.xml
<CustomField>
    <fullName>TypeSeance__c</fullName>
    <label>Type Séance</label>
    <length>255</length>
    <type>Text</type>
</CustomField>