force-app/main/default/objects/Programmation_Newsletter__c/fields/TypeSpectacle__c.field-meta.xml
<CustomField>
    <fullName>TypeSpectacle__c</fullName>
    <label>Type de Spectacle</label>
    <length>255</length>
    <type>Text</type>
</CustomField>