force-app/main/default/objects/Programmation_Newsletter__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>CodeComplexe__c</columns>
    <columns>NomFilm__c</columns>
    <columns>Semaine__c</columns>
    <filterScope>Everything</filterScope>
    <label>Tout</label>
    <language>en_US</language>
</ListView>